Finished my first  website

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Raihan Website</title>
+    <title>University campus</title>
     <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,8 +12,8 @@
         <div class="half-width">
             <h1>Welcome To </h1>
             <h1><span class="orange-highlight">Raihan</span> First website </h1>   
-            <h4>To start my CSE build climber and train stopper</h4>
-            <p>When i would start my Admission then corona virus taht provided more efect into my study.so,i can't focus my admission.Finally i were admitted by NITER </p>
+            <h4>Embarking on a Journey: Building Climber and Train Stopper in CSE</h4>
+            <p>Navigating the tumultuous waters of the admission process amidst the backdrop of the relentless COVID-19 pandemic presented a formidable challenge, greatly impeding my ability to concentrate on securing admission. Despite these hurdles, I am pleased to share that I have successfully gained admission to NITER </p>
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/md-raihan-ali-b1b05226a/">ABOUT ME </a>
         </div>
        <div class="half-width">
@@ -29,12 +29,12 @@
         </div>
 
         <div class="half-width">
-            <h2> Deficult some condition in Academic</h2>
+            <h2> Navigating Academic Challenges Amidst Difficult Conditions</h2>
             <p> 1. Ragging</p>
             <p> 2. Result</p>
             <p> 3. New place</p>
-            <p> 4. No protect</p>
-        <a class="link-button" target="_blank" href="">DOWNLOAD RESUME </a>
+            <p> 4. No Protection</p>
+        <a class="link-button" target="_blank" href="https://www.mastersportal.com/articles/406/write-a-successful-motivation-letter-for-your-masters.html">DOWNLOAD RESUME </a>
         </div>
 
     </section>
@@ -65,7 +65,7 @@
 
     </section>
     <footer>
-        <p> Copy action Raihan 2024 with all right reserved</p>
+        <p>© 2024 Raihan. All Rights Reserved</p>
     </footer>
 </body>
 </html>
